service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konzek-flask-app-service
  namespace: konzek
spec:
  selector:
    app: konzek-flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
