ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konzek-flask-app-ingress
  namespace: konzek
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: konzek-flask-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: konzek-flask-app-service
                port:
                  number: 80
